--- a/TestingProject/TestingProject.csproj
+++ b/TestingProject/TestingProject.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestingBox.cs" />
     <Compile Include="TestingFigures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
